--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -50,11 +50,16 @@
     }
     button.logged-in {
       background-color: #23262f;
+      padding: 10px;
       border: 1px solid #23262f;
-      color: white;
-      &:hover {
-        background-color: #f83500;
-        border: 1px solid #f83500;
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+      align-items: center;
+      color: #ffffff;
+
+      svg {
+        fill: white;
       }
     }
     .navmenu {
